sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:14: error: not found: value setValie
  setValie(pos,j)
  ^AlgInsertionSort:14: error: not found: value pos
  setValie(pos,j)
           ^AlgInsertionSort:14: error: not found: value j
  setValie(pos,j)
               ^